--- a/src/components/Cta/CtaCards.astro
+++ b/src/components/Cta/CtaCards.astro
@@ -5,7 +5,6 @@
  * ! If you can an error for an icon like "Error: Not Found: "calendar-check" in pack "tabler",
  * ! You can copy to actual SVG into src/icons and name it however and use similar to below
  */
-import { getLocalizedRoute } from "@/js/translationUtils";
 
 // components
 import FeatureCard from "@components/FeatureCard/FeatureCardMedium.astro";
@@ -55,7 +54,7 @@ const featureData: FeatureData[] = [
 			<div class="flex">
 				<Button
 					variant="primary"
-					href={getLocalizedRoute(currLocale, "/contact")}
+					href={"/contact"}
 					class="mt-6"
 					arrow="right"
 				>
