--- a/src/components/Hero/HeroBgImage.astro
+++ b/src/components/Hero/HeroBgImage.astro
@@ -3,7 +3,7 @@
  * * Hero with background image
  * You'll want a mobile image, and a desktop image for this.
  */
-import { getLocalizedRoute } from "@/js/translationUtils";
+
 import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
 
@@ -12,14 +12,11 @@ import Button from "@components/Button/Button.astro";
 
 // utils
 import { getLocaleFromUrl } from "@js/localeUtils";
-import { useTranslations } from "@js/translationUtils";
-
 // images
 import heroImage from "@assets/images/happy-family-crop2.png";
 import heroImageMobile from "@assets/images/happy-family-crop-mobile2.png";
 
 const currLocale = getLocaleFromUrl(Astro.url);
-const t = useTranslations(currLocale);
 ---
 
 <section id="hero" class="relative mb-14 flex min-h-[60svh] w-full md:pb-22">
@@ -70,12 +67,12 @@ const t = useTranslations(currLocale);
 				</span>
 			</h1>
 			<p class="description mt-6" data-aos="fade-up" data-aos-delay=".2">
-				{t("hero_description")}
+				Hero description
 			</p>
 			<div class="mt-6 flex flex-wrap gap-4">
 				<Button
 					variant="primary"
-					href={getLocalizedRoute(currLocale, "/contact")}
+					href={"/contact"}
 					data-aos="fade-up"
 					data-aos-delay=".9"
 				>
