--- a/src/components/Hero/HeroCentered.astro
+++ b/src/components/Hero/HeroCentered.astro
@@ -10,10 +10,7 @@ import VideoButton from "@components/Button/VideoButton.astro";
 
 // utils
 import { getLocaleFromUrl } from "@js/localeUtils";
-import { useTranslations } from "@js/translationUtils";
-
 const currLocale = getLocaleFromUrl(Astro.url);
-const t = useTranslations(currLocale);
 ---
 
 <section id="hero" class="relative mb-14 flex w-full overflow-hidden pb-10">
@@ -59,7 +56,7 @@ const t = useTranslations(currLocale);
 				</span>
 			</h1>
 			<p class="description mt-6" data-aos="fade-up" data-aos-delay=".2">
-				{t("hero_description")}
+				Hero description
 			</p>
 			<div class="mt-6 flex flex-wrap justify-center gap-4">
 				<Button
