--- a/src/components/PostCard/PostCardFull.astro
+++ b/src/components/PostCard/PostCardFull.astro
@@ -1,5 +1,5 @@
 ---
-import { getLocalizedRoute } from "@/js/translationUtils";
+
 import { type CollectionEntry, getEntries } from "astro:content";
 import { Image } from "astro:assets";
 
@@ -24,7 +24,7 @@ const authorsData = await getEntries(authors);
 <!-- href={`/blog/${post.id}/`} -->
 <article class=`flex grid gap-4 md:grid-cols-2 md:gap-8 ${className}` {...rest}>
 	<a
-		href={getLocalizedRoute(currLocale, `/blog/${post.id}/`)}
+		href={`/blog/${post.id}/`}
 		class="shrink-0 justify-center overflow-hidden rounded-lg sm:justify-normal"
 	>
 		<figure>
@@ -43,7 +43,7 @@ const authorsData = await getEntries(authors);
 			{
 				categories.map((category) => (
 					<a
-						href={getLocalizedRoute(currLocale, `/categories/${slugify(category)}/`)}
+						href={`/categories/${slugify(category)}/`}
 						class="button button--ghost px-2 py-0.5 font-medium md:px-4 md:py-1"
 					>
 						{humanize(category)}
@@ -55,7 +55,7 @@ const authorsData = await getEntries(authors);
 		<!-- title -->
 		<div>
 			<a
-				href={getLocalizedRoute(currLocale, `/blog/${post.id}/`)}
+				href={`/blog/${post.id}/`}
 				class="hover:border-primary-500 border-b-2 border-transparent transition duration-300"
 			>
 				<h2 class="inline text-lg font-medium md:text-2xl lg:text-3xl">
