--- a/src/components/PostCard/PostCardLarge.astro
+++ b/src/components/PostCard/PostCardLarge.astro
@@ -1,5 +1,5 @@
 ---
-import { getLocalizedRoute } from "@/js/translationUtils";
+
 import { type CollectionEntry, getEntries } from "astro:content";
 import { Image } from "astro:assets";
 
@@ -22,7 +22,7 @@ const authorsData = await getEntries(authors);
 ---
 
 <a
-	href={getLocalizedRoute(currLocale, `/blog/${post.id}/`)}
+	href={`/blog/${post.id}/`}
 	class=`flex group grid md:grid-cols-3 md:gap-4 ${className}`
 	{...rest}
 >
