--- a/src/components/SiteLogo/SiteLogo.astro
+++ b/src/components/SiteLogo/SiteLogo.astro
@@ -1,5 +1,5 @@
 ---
-import { getLocalizedRoute } from "@/js/translationUtils";
+
 import { Image } from "astro:assets";
 
 // images
@@ -7,7 +7,7 @@ import logo from "@images/stellar-logo.png";
 
 // utils
 import { getLocaleFromUrl } from "@js/localeUtils";
-import { getTranslatedData } from "@js/translationUtils";
+import { getTranslatedData, getLocalizedRoute } from "@js/translationUtils";
 
 // data
 const currLocale = getLocaleFromUrl(Astro.url);
