--- a/src/layouts/BlogLayoutCenter.astro
+++ b/src/layouts/BlogLayoutCenter.astro
@@ -1,7 +1,6 @@
 ---
 import { type CollectionEntry, getEntries } from "astro:content";
 import { Image } from "astro:assets";
-import { getLocalizedRoute } from "@/js/translationUtils";
 
 // main layout
 import BaseLayout from "./BaseLayout.astro";
@@ -12,8 +11,6 @@ import Button from "@components/Button/Button.astro";
 // utils
 import { formatDate, humanize, slugify } from "@js/textUtils";
 import { getLocaleFromUrl } from "@js/localeUtils";
-import { useTranslations } from "@js/translationUtils";
-
 interface Props {
 	post: CollectionEntry<"blog">;
 }
@@ -22,7 +19,6 @@ const { post } = Astro.props as Props;
 const { title, description, authors, categories, pubDate, updatedDate, heroImage } = post.data;
 
 const currLocale = getLocaleFromUrl(Astro.url);
-const t = useTranslations(currLocale);
 const authorsData = await getEntries(authors);
 ---
 
@@ -107,7 +103,7 @@ const authorsData = await getEntries(authors);
 						updatedDate && (
 							<div class="mb-6 italic">
 								<time datetime={updatedDate.toISOString()}>
-									{t("updated")}: {formatDate(pubDate, currLocale)}
+									Updated: {formatDate(pubDate, currLocale)}
 								</time>
 							</div>
 						)
@@ -120,11 +116,11 @@ const authorsData = await getEntries(authors);
 					<div class="mt-16 flex justify-center">
 						<Button
 							variant="outline"
-							href={getLocalizedRoute(currLocale, "/blog")}
+							href={"/blog"}
 							arrow="left"
 							class="py-2"
 						>
-							{t("back_to_all_posts")}
+							Back to all posts
 						</Button>
 					</div>
 				</div>
