--- a/src/pages/overview.astro
+++ b/src/pages/overview.astro
@@ -1,5 +1,4 @@
 ---
-import { getLocalizedRoute } from "@/js/translationUtils";
 
 // main layout
 import BaseLayout from "@layouts/BaseLayout.astro";
@@ -26,11 +25,11 @@ const overview__link = "my-[.15rem] leading-snug transition hover:text-primary-6
 				<!-- Landing pages -->
 				<div class="flex flex-col">
 					<h3 class={overview__heading}>Landing Pages</h3>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/")}>Landing 1</a>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/examples/landing2")}
+					<a class={overview__link} href={"/"}>Landing 1</a>
+					<a class={overview__link} href={"/examples/landing2"}
 						>Landing 2</a
 					>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/examples/landing3")}
+					<a class={overview__link} href={"/examples/landing3"}
 						>Landing 3</a
 					>
 				</div>
@@ -38,16 +37,16 @@ const overview__link = "my-[.15rem] leading-snug transition hover:text-primary-6
 				<!-- Blog pages -->
 				<div class="flex flex-col">
 					<h3 class={overview__heading}>Blog</h3>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/blog")}>Blog Index 1</a>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/examples/blogIndex2")}
+					<a class={overview__link} href={"/blog"}>Blog Index 1</a>
+					<a class={overview__link} href={"/examples/blogIndex2"}
 						>Blog Index 2</a
 					>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/categories")}
+					<a class={overview__link} href={"/categories"}
 						>Categories</a
 					>
 					<a
 						class={overview__link}
-						href={getLocalizedRoute(currLocale, "/blog/tsconfig-paths-setup")}>Blog Post</a
+						href={"/blog/tsconfig-paths-setup"}>Blog Post</a
 					>
 				</div>
 
@@ -56,15 +55,15 @@ const overview__link = "my-[.15rem] leading-snug transition hover:text-primary-6
 					<h3 class={overview__heading}>Sections</h3>
 					<a
 						class={overview__link}
-						href={getLocalizedRoute(currLocale, "/examples/feature-services")}
+						href={"/examples/feature-services"}
 						>All Feature and Services Sections</a
 					>
 					<a
 						class={overview__link}
-						href={getLocalizedRoute(currLocale, "/examples/testimonial-faq")}
+						href={"/examples/testimonial-faq"}
 						>All Testimonial and FAQ Sections</a
 					>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/examples/hero-sections")}
+					<a class={overview__link} href={"/examples/hero-sections"}
 						>All Hero Sections</a
 					>
 				</div>
@@ -72,8 +71,8 @@ const overview__link = "my-[.15rem] leading-snug transition hover:text-primary-6
 				<!-- Site Elements -->
 				<div class="flex flex-col">
 					<h3 class={overview__heading}>Elements and Forms</h3>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/elements")}>MDX Pages</a>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/contact")}>Contact</a>
+					<a class={overview__link} href={"/elements"}>MDX Pages</a>
+					<a class={overview__link} href={"/contact"}>Contact</a>
 				</div>
 
 				<!-- Widgets -->
@@ -86,11 +85,11 @@ const overview__link = "my-[.15rem] leading-snug transition hover:text-primary-6
 				<!-- Other -->
 				<div class="flex flex-col">
 					<h3 class={overview__heading}>Other Pages</h3>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/about")}>About</a>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/privacy-policy")}
+					<a class={overview__link} href={"/about"}>About</a>
+					<a class={overview__link} href={"/privacy-policy"}
 						>Privacy Policy</a
 					>
-					<a class={overview__link} href={getLocalizedRoute(currLocale, "/terms")}>Terms of Use</a>
+					<a class={overview__link} href={"/terms"}>Terms of Use</a>
 					<a class={overview__link} href="/not-a-link/">404</a>
 					<a class={overview__link} href="/rss.xml" target="_blank" rel="noopener noreferrer"
 						>RSS Feed</a
@@ -107,7 +106,7 @@ const overview__link = "my-[.15rem] leading-snug transition hover:text-primary-6
 				<div class="text-center">
 					<p class="text-sm lg:text-base">
 						We use cookies to improve your experience on this site. To learn more, see our <a
-							href={getLocalizedRoute(currLocale, "/privacy-policy")}
+							href={"/privacy-policy"}
 							class="decoration-primary-500 hover:text-primary-500 underline transition"
 							>Privacy Policy</a
 						>.
